crawler-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: crawler
  name: crawler-ervice
spec:
  selector:
    app: synergychat-crawler
  ports:
  - port: 80
    targetPort: 8080
